Actually really finally fixed the CSS render problems on mobile

--- a/game/stylesheet.css
+++ b/game/stylesheet.css
@@ -18,7 +18,7 @@
     box-shadow: 0 0 1px 0 rgba(115, 115, 115, 0.5);
 }
 #number_bar {
-    position: relative;
+    position: absolute;
     display: flex;
     font-family: "Times New Roman", Times, serif;
     color: white;
@@ -55,9 +55,7 @@
 
 #pending_input {
     display: flex;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
+    position: absolute;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
@@ -91,6 +89,8 @@
     height: 100%;
     position: absolute;
     left: 40px;
+    top: 0px;
+    z-index: -1;
 }
 
 #popout button {
@@ -121,10 +121,10 @@
     cursor: pointer;
 }
 div#score_popup {
-    position: absolute;
+    position: relative;
     z-index: 0;
     width: 100%;
-    top: 23%;
+    top: 2%;
     display: none;
 }
 div#score_popup.shown {
@@ -298,10 +298,9 @@ div#top_bar {
 }
 
 #timer_bar_child {
-    position: relative;
     height: 100%;
-    width: 0%;
     background-color: rgba(0, 0, 0, 0.588);
+    width: 0;
 }
 #timer_bar_child.pink {
     background-color: rgba(255, 185, 185, 0.9);
@@ -361,10 +360,10 @@ div#top_bar {
 
 @keyframes show_score {
     from {
-        top: 23%;
+        top: 2%;
     }
     to {
-        top: 37%;
+        top: 17%;
     }
 }
 
@@ -379,21 +378,22 @@ div#top_bar {
     #ribbon {
         top: 14vh;
         width: 100vh;
-        height: 28vh;
     }
     #pending_input {
         border-bottom: 1vh solid black;
         font-size: 5vh;
         width: 95vh;
         height: 12vh;
-        top: 19vh;
+        top: 50%;
         line-height: 11.5vh;
+        left: 2.5vh;
     }
     #number_bar {
         font-size: 15vh;
         width: 95vh;
         height: 18vh;
-        top: 31.5vh;
+        top: 68vh;
+        left: 2.5vh;
     }
     #left_insert, #right_insert {
         width: 10vh;
@@ -433,21 +433,22 @@ div#top_bar {
     #ribbon {
         top: 14vw;
         width: 100vw;
-        height: 28vw;
     }
     #pending_input {
         border-bottom: 1vw solid black;
         font-size: 5vw;
         width: 86vw;
         height: 12vw;
-        top: 19vw;
+        top: 50%;
         line-height: 11.5vw;
+        left: 7vw;
     }
     #number_bar {
         font-size: 15vw;
         width: 86vw;
         height: 18vw;
-        top: 31.5vw;
+        top: 68vw;
+        left: 7vw;
     }
 
     #left_insert, #right_insert {
